--- a/app/src/main/res/layout/item_throw_up.xml
+++ b/app/src/main/res/layout/item_throw_up.xml
@@ -5,8 +5,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="8dp"
-    app:cardBackgroundColor="@android:color/white">
+    android:layout_margin="8dp">
 
     <LinearLayout
         android:layout_width="match_parent"
